Fix main new spacing

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -339,12 +339,18 @@ template {
   display: none; }
 
 /* line 1, src/scss/partials/_global.scss */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box; }
+
+/* line 7, src/scss/partials/_global.scss */
 body {
   font-family: "Inter", sans-serif;
   max-width: 343px;
   margin: 0 auto; }
 
-/* line 7, src/scss/partials/_global.scss */
+/* line 13, src/scss/partials/_global.scss */
 img {
   width: 100%;
   height: 100%; }
@@ -404,19 +410,21 @@ header {
   .main__new h2 {
     color: #e9ab53;
     font-size: 2rem;
-    font-weight: bold; }
-  /* line 46, src/scss/partials/_main.scss */
+    font-weight: bold;
+    margin-bottom: 2.1875rem; }
+  /* line 47, src/scss/partials/_main.scss */
   .main__new-group {
     padding-bottom: 1.8125rem; }
-    /* line 48, src/scss/partials/_main.scss */
+    /* line 49, src/scss/partials/_main.scss */
     .main__new-group:not(:last-child) {
-      border-bottom: 1px solid #5e607a; }
-    /* line 52, src/scss/partials/_main.scss */
+      border-bottom: 1px solid #5e607a;
+      margin-bottom: 2rem; }
+    /* line 54, src/scss/partials/_main.scss */
     .main__new-group h3 {
       color: #fffdfa;
       font-size: 1.25rem;
       font-weight: 800; }
-    /* line 58, src/scss/partials/_main.scss */
+    /* line 60, src/scss/partials/_main.scss */
     .main__new-group p {
       color: #c5c6ce;
       font-size: 0.9375rem;
