--- a/src/scss/partials/_main.scss
+++ b/src/scss/partials/_main.scss
@@ -41,12 +41,14 @@
       color: $Color-Soft-Orange;
       font-size: 2rem;
       font-weight: bold;
+      margin-bottom: 2.1875rem;
     }
 
     &-group {
       padding-bottom: 1.8125rem;
       &:not(:last-child) {
         border-bottom: 1px solid #5e607a;
+        margin-bottom: 2rem;
       }
 
       & h3 {
